[S3] add S3Delete Task and implement download all files within directory